# pyAFQ

./: .buildinfo  .gitattributes  .gitignore  .gitmodules  .mailmap  .pep8speaks.yml  .pre-commit-config.yaml  .travis.yml  .zenodo.json  CHANGES.rst  CITATION  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  aws_credentials.sh  brainlife.Dockerfile  circle.yml  conftest.py  contributing.html  genindex.html  get_version.py  getting_help.html  index.html  installation_guide.html  main  objects.inv  py-modindex.html  pyafq_cli.json  pyproject.toml  requirements-dev.txt  requirements-fury.txt  requirements-plotly.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  sg_execution_times.html  (+5 more)
.circleci/: AFQ_tests.yml  config.yml  install-circle.sh
.github/: CITATION.cff  CONTRIBUTING.md
.github/workflows/: ci.yml  docbuild.yml  docker.yml  docker_afqsi.yml  docker_pyafq.yml  docker_pyafq_cuda12.yml  nightly2_test.yml  nightly3_test.yml  nightly4_test.yml  nightly5_test.yml  nightly6_test.yml  nightly_anisotropic_test.yml  nightly_basic_test.yml  nightly_custom_test.yml  nightly_msmt_and_init_test.yml  nightly_pft_test.yml  nightly_reco80_test.yml  nightly_reco_test.yml  nightly_slr.yml  nightly_test.yml  publish-to-test-pypi.yml  test.yml
.maintenance/: update_zenodo.py
AFQ/: __about__.py  __init__.py  _fixes.py  _meta.py  _version.py  afq_bids_entities.json  api.py  bundles.py  csd.py  data.py  dki.py  dti.py  gputractography.py  localtracking.py  mask.py  pytest.ini  registration.py  s3bids.py  segmentation.py  surface.py  templates.py  tractography.py  version.py  viz.py
AFQ/api/: bundle_dict.py  custom_recognizer.py  group.py  participant.py  utils.py
AFQ/bundle_rec/: cleaning.py  criteria.py  preprocess.py  recognize.py  utils.py
AFQ/data/: fastsurfer_integration.py  fetch.py  s3bids.py  utils.py
AFQ/definitions/: image.py  mapping.py  mask.py  scalar.py  utils.py
AFQ/models/: QBallTP.py  csd.py  dki.py  dti.py  fwdti.py
AFQ/nn/: fastsurfer_integration.py  profile_roi.py
AFQ/recognition/: cleaning.py  criteria.py  curvature.py  other_bundles.py  preprocess.py  recognize.py  roi.py
AFQ/tasks/: data.py  decorators.py  extraction.py  mapping.py  models.py  profile.py  segmentation.py  tractography.py  utils.py  viz.py
AFQ/tests/: test_api.py  test_bundle_dict.py  test_bundles.py  test_csd.py  test_data.py  test_definitions.py  test_dki.py  test_dti.py  test_fixes.py  test_mask.py  test_pybids.py  test_registration.py  test_roi.py  test_s3bids.py  test_scripts.py  test_segmentation.py  test_tractography.py  test_viz.py  utils.py
AFQ/tractography/: gputractography.py  tractography.py  utils.py
AFQ/utils/: __init__.py  bin.py  conversion.py  docs.py  models.py  parallel.py  path.py  stats.py  streamlines.py  testing.py  volume.py
AFQ/viz/: afq_fury.py  afq_plotly.py  altair.py  fury_backend.py  plot.py  plotly_backend.py  utils.py
AFQ/viz_libs/: afq_fury.py  afq_plotly.py  utils.py
_downloads/015918a8330202df4023358a25c0868c/: plot_afq_callosal.py
_downloads/02295fbcea33a12a6104622260338d69/: add_custom_bundle.py
_downloads/0b5020f6d55ab9dec8de544d67467741/: cloudknot_hcp_example.ipynb
_downloads/0dfd2198d16c83cb531bb480c88ae64f/: vof_example.ipynb
_downloads/13c63bb142eb6d45e626d530c348c13b/: plot_afq_api.py
_downloads/162c215c6ebd1c57b0adf65819838c1b/: cloudknot_example.ipynb
_downloads/1de06998fdfd55ebf9837a88047f7ef8/: add_custom_bundle.ipynb
_downloads/23a22bcd63f859ad6c035e382907c1ff/: plot_recobundles.py
_downloads/2d796614001e9906a32a6e068a4871a8/: use_subject_space_rois_from_freesurfer.py
_downloads/2f817457a1adf08ee9a65de4fb486a08/: plot_002_bids_layout.ipynb
_downloads/35228570386431b1f7017f8293ce6775/: plot_afq_fwdti.ipynb
_modules/: AFQ.html  index.html
_sources/: contributing.rst.txt  getting_help.rst.txt  index.rst.txt  installation_guide.rst.txt  sg_execution_times.rst.txt  usage.rst.txt
_static/: custom.css  documentation_options.js
afqsi_docker/: Dockerfile  docker-build.sh
auto_examples/: cloudknot_example.html  cloudknot_hcp_example.html  index.html  optic_radiations.html  plot_afq_api.html  plot_afq_callosal.html  plot_afq_fwdti.html  plot_bids_layout.html  plot_callosal_tract_profile.html  plot_optic_radiations.html  plot_recobundles.html  plot_tract_profile.html  plot_viz.html  sg_execution_times.html  vof_example.html
autoapi/: index.html
ci_scripts/: install.sh  test.sh
developing/: definitions.html  index.html  releasing.html  tasks.html
doc/: Makefile  api.rst  conf.py  index.rst
docs/: Makefile
examples/: README.txt  cloudknot_example.py  cloudknot_hcp_example.py  cloudknot_recobundles.ipynb  cloudknot_waypoint.ipynb  my_plot_tract_profile.py  optic_radiations.py  pipeline.py  plot_afq_api.py  plot_afq_callosal.py  plot_afq_fwdti.py  plot_afq_reco80.py  plot_baby_afq.py  plot_bids_layout.py  plot_brainsprite.py  plot_callosal_tract_profile.py  plot_example.py  plot_optic_radiations.py  plot_other_tracking.py  plot_recobundles.py  plot_tract_profile.py  plot_viz.py  recobundles_hcp.py  vof_example.py  working_plot_tract_profile.py
explanations/: bundle_orientation.html  cleaning.html  index.html  mapping.html  modeling.html  profiling.html  recognition.html  tractography.html  tractometry_pipeline.html  visualization.html
gpu_docker/: Dockerfile  Singularity  cuda_build.sh  cuda_track.def  cuda_track_template.def  docker-build-12.sh  docker-build.sh  docker-push-12.sh  docker-push.sh
howto/: cite.html  contributing.html  converter.html  data.html  docker.html  getting_help.html  index.html  installation_guide.html  scalars.html
pyafq_docker/: Dockerfile  docker-build.sh  docker-push.sh
reference/: bundledict.html  config.html  index.html  kwargs.html  mapping.html  methods.html  tracking.html  viz_backend.html
tutorials/: index.html
usage/: bundledict.html  config.html  converter.html  data.html  docker.html  image.html  index.html  kwargs.html  mapping.html  mask.html  methods.html  scalars.html  tracking.html  viz_backend.html
(+544 files in other folders)
