[metadata]
name = pyAFQ
url = https://yeatmanlab.github.io/pyAFQ
download_url = https://github.com/yeatmanlab/pyAFQ
author = pyAFQ developers
author_email = arokem@gmail.com
maintainer = Ariel Rokem
maintainer_email = arokem@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description = pyAFQ: Automated Fiber Quantification ... in Python
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.7
install_requires =
    scikit_image>=0.16.0,<=0.18.*
    nibabel>=3.0.0,<=3.2.*
    dipy>=1.2.0,<=1.3.*
    scipy>=1.2.0,<=1.6.*
    numpy>=1.18.5,<1.20
    pandas>=1.0.0,<=1.2.*
    joblib>=0.16.0,<=1.0.*
    dask>=1.1,<=2021.2.0
    palettable>=3.1.0,<=3.3.*
    cloudpickle>=1.3.0,<=1.6.*
    toolz>=0.9.0,<=0.11.*
    boto3>=1.14.18,<=1.17.10
    s3fs>=0.4.0,<=0.5.*
    tqdm>=4.0.0,<=4.57.*
    python-dateutil>=2.0.0,<=2.8.*
    toml==0.10.*
    setuptools_scm[toml]>=3.4.0,<=5.0.*
    popylar==0.2.*
    imageio>=2.8.0,<=2.9.*
    templateflow>=0.6.0,<=0.7.*
    pybids>=0.11.0,<=0.12.*
    funcargparse==0.2.*
    packaging>=19.0.0,<=20.9.*
    seaborn==0.11.*
    cvxpy==1.1.*
    plotly==4.9.0
    psutil>=5.7.0,<=5.8.*
    kaleido==0.0.3.post1
    pip-conflict-checker==0.6.*
zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
dev =
    botocore==1.17.19
    docutils==0.15.2
    sphinx
    pytest==6.0.1
    pytest-cov==2.10.0
    flake8
    sphinx_gallery
    sphinx_rtd_theme
    numpydoc==0.9.2
    sphinx-autoapi
    rapidfuzz
    xvfbwrapper==0.2.9
    moto==1.3.14
fury =
    ipython>=7.13.0,<=7.20.0
    vtk==9.0.1
    fury==0.6.0
    xvfbwrapper==0.2.9
