[metadata]
name = pyAFQ
url = https://yeatmanlab.github.io/pyAFQ
download_url = https://github.com/yeatmanlab/pyAFQ
author = pyAFQ developers
author_email = arokem@gmail.com
maintainer = Ariel Rokem
maintainer_email = arokem@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Scientific/Engineering

license = BSD License
description = pyAFQ: Automated Fiber Quantification ... in Python
long_description = file:README.md
long_description_content_type = text/markdown
platforms = OS Independent

[options]
setup_requires =
  setuptools_scm
python_requires = >=3.8
install_requires =
    # core packages
    scikit_image>=0.14.2
    dipy>=1.5.0,<1.6.0
    pandas
    pybids>=0.15.0
    templateflow>=0.8
    pimms
    joblib>=0.16.0
    dask>=1.1
    # AWS integration packages
    boto3>=1.14.0
    s3fs~=0.4.2
    # CLI interpretation
    toml>=0.10.0
    setuptools_scm[toml]>=3.4.0,<5.1.0
    funcargparse>=0.2.0
    # usage tracking
    popylar==0.2.*
    # plotly libraries
    plotly==5.3.0
    kaleido==0.2.1
    imageio>=2.0.0
    Pillow
    numpy==1.23.5

zip_safe = False
include_package_data = True
packages = find:

[options.extras_require]
dev =
    docutils==0.15.2
    sphinx
    pytest==7.2.0
    pytest-cov==2.10.0
    flake8
    sphinx_gallery
    sphinx_rtd_theme
    numpydoc==1.2
    sphinx-autoapi
    rapidfuzz
    xvfbwrapper==0.2.9
    moto>=3.0.0
    pip-conflict-checker>=0.6.0
    pydata-sphinx-theme
    sphinx-design
fury =
    fury==0.8.0
    xvfbwrapper==0.2.9
    ipython>=7.13.0,<=7.20.0
fsl =
    fslpy
itk =
    h5py
afqbrowser =
    AFQ-Browser>=0.3
plot =
    pingouin>=0.3
    seaborn>=0.11.0
    ipython>=7.13.0,<=7.20.0
all =
    %(dev)s
    %(fury)s
    %(fsl)s
    %(itk)s
    %(afqbrowser)s
    %(plot)s
